# Gyra

./: .gitignore  README.md  pyproject.toml
src/: detect_vehicles.py  spin_video.py  spin_video_realistic.py  telemetry_detect_vehicles.py  vidstab_detect_vehicles.py
