[project]
name = "gyra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "ultralytics>=8.4.33",
  "opencv-python>=4.13.0.92",
  "torch>=2.11.0",
  "torchvision>=0.26.0",
  "kornia>=0.7.0",
  "onnx>=1.15.0",
  "onnxruntime-gpu>=1.15.0",
  "tensorrt>=8.5.0",
  "pycuda>=2024.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
